<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_Fragment_demo">Fragment Demo</string>
    <string name="title_activity_SharedPreferenceTest">SharedPreferenceTest</string>
    <string name="hello_world">您所输入的是：</string>
    <string name="action_search">Search...</string>
    <string name="Username">User Name</string>
    <string name="Password">Password</string>
    <string name="edit_username">Enter Username</string>
    <string name="edit_password">Enter Password</string>
    <string name="button_save">Save</string>
    <string name="button_go_to_B">Go to B</string>
    <string name="button_load">Load</string>
    <string name="button_previous">Previous</string>


</resources>