<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:andriod="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0.5dp"
            android:hint="@string/edit_message" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:onClick="sendMessage"
            android:text="@string/button_send" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/Username"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:singleLine="false"
            android:text="@string/Username"
            android:background="#c5e1b0"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_username"
            android:padding="4dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/Password"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:singleLine="false"
            android:text="@string/Password"
            android:background="#c5e1b0"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:hint="@string/edit_password"
            android:singleLine="true"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="save"
            android:text="@string/button_save"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"/>

        <Button
            android:id="@+id/go_to_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="next"
            android:text="@string/button_go_to_B"
            android:layout_marginRIght="80dp"
            android:layout_marginStart="80dp"/>
    </LinearLayout>

</LinearLayout>

