<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/load_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="load"
            android:text="@string/button_load"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/load_username"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:singleLine="false"
            android:text="@string/Username"
            android:background="#f6c0c0"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/show_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/load_password"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:singleLine="false"
            android:text="@string/Password"
            android:background="#f6c0c0"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:singleLine="true"
            android:inputType="textPassword" />
    </LinearLayout>



</LinearLayout>